lab1/Test/L1-A-7-43.cmm
float ;
int WYyTeMj4Z7rKfOU [ 1312255775 ] 
;
int ;
int ;
int rt9lMYg6ub0 , a32WXx9cW6W7YU 

;
int zJ4 ( int TddIQUkebJuZiYuASoc , int kNZ ) {
  P0B0Vw9XpFzM3kZ8 ;
  if ( LKDaosaopgFxPQ )   xhgFzl ;
else   if ( lkkn8rJLUQUU5WS )   BDgC_cyexK ;


  if ( y6rVYQ3 )   while ( mR0lmgi3dDAr7T9 )   YM4vuqMMXz 
    ;

else   RPadXGnaz4J2DzjhX3a ;

}
int _cdOkG1IVwPiRgEQQtR ( ) {
  while ( za1m5E61My )   APdUm5qDe59EDM ;

  if ( CNWg1eDNOB5p ) {
  }
}
struct ST4kPQvA {
'  int K3K1yf ;
  struct P48 u7yQf ;
};
struct CZoE6nnrw ;
int IkBY2x ( struct %{
  struct Yfpq VfE97ITy8looV580PbZo , wCF0sLUUiUfaJvA9url 
    ;
}uVCm2SSDrytn5 ) {
  struct NNepM _3 = Q2y2k ;
  return VhSeOE || xbFXVDf8oxC9JxPsyqez && xE686nQ5_Fc6W 
    != ! - zSxvd [ LUsBqs6UyFWE = pTlWr9YPVa0zJno5L >= 
    misvZOgObziCNN_VPz - jI / ! - - z5xH ( qWbstgqBOph_ta 
    && X5MhNb > HCwT96vO3uf + gtMXh6P558lZp0 / ( m || 
    AUXd <= ifDn0q6nkH14i + - GXRmKSKSyjofx7c ( RfzarRl06_RnFHOR 
    , T8u3e6zuP = ADC_h_SW2E8qCk = tfh9Ez9aDNcN5v || FCzGSou5dlDuh 
    && y5m4SzYH < _qpMN ) && ! WUn7OZMk == DvwWTOVxlMQVdAlZFeAb 
    / ! $1254457621.657243686 - 891781888 ) / QlEGlhWIzPLEV2c 
    . Znosk0 * ! oNWECl_kZvGtB8kAb5K8 ( ) ) ] ;
}
